--- a/aks-deploy-from-acr.yaml
+++ b/aks-deploy-from-acr.yaml
@@ -6,15 +6,15 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      app: springboot-app
+      app: springbootapp
   template:
     metadata:
       labels:
-        app: springboot-app
+        app: springbootapp
     spec:
       containers:
       - name: my-springboot-app
-        image: myacrrepo43.azurecr.io/akannan1087/springboot-app:#{Build.BuildId}#
+        image: myacrrepo23.azurecr.io/RajalakshmiVenkatasamy/springbootapp:#{Build.BuildId}#
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
@@ -24,9 +24,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: springboot-app
-    k8s-app: springboot-app
-  name: springboot-app
+    app: springbootapp
+    k8s-app: springbootapp
+  name: springbootapp
 spec:
   ports:
   - name: http
